# inventory-system

./: .env.example  .gitignore  FIXES.md  INSTRUCTIONS.md  README.md  SHEETS_STRUCTURE.md  dashboard.py  main.py  pyproject.toml  setup_sheets.py
src/: inventory_engine.py  models.py  sheets_client.py  shopify_client.py  store_config.py
